samples/_failures_safe/1761193624_25c449_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34d2edf8.c: In function ‘main’:
./samples/SAFE/__tmp_34d2edf8.c:147:5: error: expected expression at end of input
  147 |     if (
      |     ^~
./samples/SAFE/__tmp_34d2edf8.c:147:5: error: expected declaration or statement at end of input
